<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DashboardActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="170dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="186dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_eleven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainCard"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:outlineProvider="none"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_start"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/headerDashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_app"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/imageCard1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:cardCornerRadius="120dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_second"
        app:layout_constraintEnd_toEndOf="@+id/mainCard"
        app:layout_constraintStart_toStartOf="@+id/mainCard"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_first">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/politeknik_negeri_madiun" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/namaLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_logo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/mainCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_second" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/secondCard"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_three"
        tools:layout_editor_absoluteX="32dp">

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/imageCard2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/secondCard"
        app:layout_constraintEnd_toStartOf="@+id/guideline_horizontal_four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_three">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/namaDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_profile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/secondCard"
        app:layout_constraintStart_toStartOf="@+id/secondCard"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_five" />

    <TextView
        android:id="@+id/nimDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/secondCard"
        app:layout_constraintStart_toStartOf="@+id/guideline_horizontal_six"
        app:layout_constraintTop_toBottomOf="@+id/namaDashboard" />

    <Button
        android:id="@+id/btn_presensi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/submit_presensi"
        android:textColor="@color/offwhite"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondCard" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/threeCard"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:backgroundTint="@color/white"
        android:outlineProvider="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_nine"></com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupPresensi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="threeCard,presensi,presensi2,currentTime"></androidx.constraintlayout.widget.Group>

    <TextView
        android:id="@+id/presensi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_presensi"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_eleven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_ten" />

    <TextView
        android:id="@+id/presensi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_detail_presensi"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/threeCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_nine" />

    <TextView
        android:id="@+id/currentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/threeCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presensi2" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/txt_logout"
        android:textColor="@color/offwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>